--- a/changelog.txt
+++ b/changelog.txt
@@ -140,6 +140,11 @@ Minor GUI tweaks
 -Page load time at bottom of page
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.1.4:
+-Fixed Bitcoin / USD price bug (many thanks to Normand for reporting it)
+-------------------------------------------------------------------
+
 
 
 
