--- a/changelog.txt
+++ b/changelog.txt
@@ -157,6 +157,11 @@ Minor GUI tweaks
 -Added Gatecoin market capability, and added to default markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.1.7:
+-Fixed Gatecoin market bug
+-------------------------------------------------------------------
+
 
 
 
