--- a/changelog.txt
+++ b/changelog.txt
@@ -162,6 +162,12 @@ Minor GUI tweaks
 -Fixed Gatecoin market bug
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.1.8:
+-Added auto-refresh feature
+-------------------------------------------------------------------
+
+
 
 
 
