--- a/changelog.txt
+++ b/changelog.txt
@@ -173,6 +173,11 @@ Minor GUI tweaks
 -Added auto-populating Ethereum network difficulty in mining calculator
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.0:
+-Minor tweaks
+-------------------------------------------------------------------
+
 
 
 
