--- a/changelog.txt
+++ b/changelog.txt
@@ -178,6 +178,12 @@ Minor GUI tweaks
 -Minor tweaks
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.1:
+-Updated bittrex market id for Stellar (to XLM)
+-------------------------------------------------------------------
+
+
 
 
 
