--- a/changelog.txt
+++ b/changelog.txt
@@ -183,6 +183,12 @@ Minor GUI tweaks
 -Updated bittrex market id for Stellar (to XLM)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.2:
+-Added Maidsafecoin to default coins
+-------------------------------------------------------------------
+
+
 
 
 
