--- a/changelog.txt
+++ b/changelog.txt
@@ -188,6 +188,11 @@ Minor GUI tweaks
 -Added Maidsafecoin to default coins
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.3:
+-Added Synereo AMPs to default coins
+-------------------------------------------------------------------
+
 
 
 
