--- a/changelog.txt
+++ b/changelog.txt
@@ -212,6 +212,11 @@ Minor GUI tweaks
 -Added Makercoin Bitshares market
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.7:
+-Added SSL compatibility
+-------------------------------------------------------------------
+
 
 
 
