--- a/changelog.txt
+++ b/changelog.txt
@@ -217,6 +217,12 @@ Minor GUI tweaks
 -Added SSL compatibility
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.8:
+-Added initial support for Ethereum subtokens (static values, no APIs yet)
+-------------------------------------------------------------------
+
+
 
 
 
