--- a/changelog.txt
+++ b/changelog.txt
@@ -222,6 +222,11 @@ Minor GUI tweaks
 -Added initial support for Ethereum subtokens (static values, no APIs yet)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.2.9:
+-Fixed issue totalling very large amounts of Bitcoin values
+-------------------------------------------------------------------
+
 
 
 
