--- a/changelog.txt
+++ b/changelog.txt
@@ -233,6 +233,11 @@ Minor GUI tweaks
 -Added Gemini.com ETH and BTC markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.3.1:
+-Added gdax (Coinbase exchange) ETH market
+-------------------------------------------------------------------
+
 
 
 
