--- a/changelog.txt
+++ b/changelog.txt
@@ -238,6 +238,13 @@ Minor GUI tweaks
 -Added gdax (Coinbase exchange) ETH market
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.3.2:
+-Added Lisk markets
+-Added TheDAO markets
+-------------------------------------------------------------------
+
+
 
 
 
