--- a/changelog.txt
+++ b/changelog.txt
@@ -244,6 +244,13 @@ Minor GUI tweaks
 -Added TheDAO markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.3.3:
+-Revised coinmarketcap link rendering
+-------------------------------------------------------------------
+
+
+
 
 
 
