--- a/changelog.txt
+++ b/changelog.txt
@@ -254,6 +254,11 @@ Minor GUI tweaks
 -Overhauled feed connection function, so it timeouts if services are unavailable
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.3.5:
+-Added Steem markets
+-------------------------------------------------------------------
+
 
 
 
