--- a/changelog.txt
+++ b/changelog.txt
@@ -270,6 +270,12 @@ Minor GUI tweaks
 -Added Monero, Expanse, and Shift markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.3.8:
+-Cleaned up low volume markets / resorted markets
+-------------------------------------------------------------------
+
+
 
 
 
