--- a/changelog.txt
+++ b/changelog.txt
@@ -282,6 +282,11 @@ Minor GUI tweaks
 -Tidied up minor things
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.0:
+-Fixed STEEM interest calculator bug
+-------------------------------------------------------------------
+
 
 
 
