--- a/changelog.txt
+++ b/changelog.txt
@@ -287,6 +287,12 @@ Minor GUI tweaks
 -Fixed STEEM interest calculator bug
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.1:
+-Added STEEM / STEEM Dollars Poloniex markets
+-------------------------------------------------------------------
+
+
 
 
 
