--- a/changelog.txt
+++ b/changelog.txt
@@ -292,6 +292,11 @@ Minor GUI tweaks
 -Added STEEM / STEEM Dollars Poloniex markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.2:
+-Added Ethereum Classic Poloniex market
+-------------------------------------------------------------------
+
 
 
 
