--- a/changelog.txt
+++ b/changelog.txt
@@ -297,6 +297,12 @@ Minor GUI tweaks
 -Added Ethereum Classic Poloniex market
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.3:
+-Added Ethereum Classic Bittrex market
+-------------------------------------------------------------------
+
+
 
 
 
