--- a/changelog.txt
+++ b/changelog.txt
@@ -311,6 +311,11 @@ Minor GUI tweaks
 -Other minor optimizations
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.5:
+-Modularized content sections
+-------------------------------------------------------------------
+
 
 
 
