--- a/changelog.txt
+++ b/changelog.txt
@@ -327,6 +327,13 @@ Minor GUI tweaks
 -Added LBRY (LBC) markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.4.7:
+-Reorganized markets
+-------------------------------------------------------------------
+
+
+
 
 
 
