--- a/changelog.txt
+++ b/changelog.txt
@@ -336,7 +336,7 @@ Minor GUI tweaks
 
 -------------------------------------------------------------------
 1.4.8:
-
+Added REP Markets
 -------------------------------------------------------------------
 
 
