--- a/changelog.txt
+++ b/changelog.txt
@@ -358,6 +358,12 @@ Minor GUI tweaks
 -Fixed bug in super large BTC trade values per market
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.5.1:
+-Added Golem static value subtoken market (fixed value, no active exchange trade values yet)
+-Fixed bug in static value ETH subtoken markets
+-------------------------------------------------------------------
+
 
 
 
