--- a/changelog.txt
+++ b/changelog.txt
@@ -362,6 +362,7 @@ Minor GUI tweaks
 1.5.1:
 -Added Golem static value subtoken market (fixed value, no active exchange trade values yet)
 -Fixed bug in static value ETH subtoken markets
+-Adjusted STEEM Power calculator for upcoming power down rate
 -------------------------------------------------------------------
 
 
