--- a/changelog.txt
+++ b/changelog.txt
@@ -388,6 +388,11 @@ Minor GUI tweaks
 -Added Hacker Gold crowdsale token (fixed value for now)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.5.6:
+-Corrected STEEM Power Down time period to 13 weeks
+-------------------------------------------------------------------
+
 
 
 
