--- a/changelog.txt
+++ b/changelog.txt
@@ -422,6 +422,19 @@ Minor GUI tweaks
 -Updated gatecoin API URL
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.1:
+-Added Golem poloniex market
+-------------------------------------------------------------------
+
+-------------------------------------------------------------------
+1.6.2:
+-Changed Arcade City tokens to Swarm City Tokens
+-Added HKG Bittrex market
+-------------------------------------------------------------------
+
+
+
 
 
 
