--- a/changelog.txt
+++ b/changelog.txt
@@ -433,6 +433,11 @@ Minor GUI tweaks
 -Added HKG Bittrex market
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.3:
+-Changed market name semantic for ICO value of Ethereum platform subtokens
+-------------------------------------------------------------------
+
 
 
 
