--- a/changelog.txt
+++ b/changelog.txt
@@ -438,6 +438,11 @@ Minor GUI tweaks
 -Changed market name semantic for ICO value of Ethereum platform subtokens
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.4:
+-Swarm City Tokens (SWT) Bittrex market added
+-------------------------------------------------------------------
+
 
 
 
