Default markets update
-Decred / Ubiq markets added

--- a/changelog.txt
+++ b/changelog.txt
@@ -443,6 +443,11 @@ Minor GUI tweaks
 -Swarm City Tokens (SWT) Bittrex market added
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.5:
+-Decred / Ubiq markets added
+-------------------------------------------------------------------
+
 
 
 
