--- a/changelog.txt
+++ b/changelog.txt
@@ -448,6 +448,11 @@ Minor GUI tweaks
 -Decred / PIVX / WeTrust markets added, cleaned out old markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.6:
+-Lunyr / Gnosis markets added
+-------------------------------------------------------------------
+
 
 
 
