--- a/changelog.txt
+++ b/changelog.txt
@@ -450,7 +450,7 @@ Minor GUI tweaks
 
 -------------------------------------------------------------------
 1.6.6:
--Lunyr / Gnosis markets added
+-Lunyr / Gnosis / TokenCard markets added
 -------------------------------------------------------------------
 
 
