--- a/changelog.txt
+++ b/changelog.txt
@@ -453,6 +453,11 @@ Minor GUI tweaks
 -Lunyr / Gnosis / TokenCard markets added
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.6.7:
+-Zclassic markets added, cleaned up markets
+-------------------------------------------------------------------
+
 
 
 
