--- a/changelog.txt
+++ b/changelog.txt
@@ -456,6 +456,7 @@ Minor GUI tweaks
 -------------------------------------------------------------------
 1.6.7:
 -Zclassic / Aragon markets added, cleaned up markets
+-Added cryptopia API support
 -------------------------------------------------------------------
 
 
