--- a/changelog.txt
+++ b/changelog.txt
@@ -485,6 +485,11 @@ Minor GUI tweaks
 -Added Coinmarketcap API / market(s) data feature, hovering over info icon(s)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.1:
+-Added DigixDAO markets
+-------------------------------------------------------------------
+
 
 
 
