--- a/changelog.txt
+++ b/changelog.txt
@@ -490,6 +490,11 @@ Minor GUI tweaks
 -Added DigixDAO markets
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.2:
+-Revision of disclaimer / advisory for newer crypto traders
+-------------------------------------------------------------------
+
 
 
 
