--- a/changelog.txt
+++ b/changelog.txt
@@ -495,6 +495,12 @@ Minor GUI tweaks
 -Revision of disclaimer / advisory for newer crypto traders
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.3:
+-Minimize default coin list
+-Minor CSS Tweak
+-------------------------------------------------------------------
+
 
 
 
