--- a/changelog.txt
+++ b/changelog.txt
@@ -501,6 +501,13 @@ Minor GUI tweaks
 -Minor CSS Tweak
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.4:
+-Added tradesatoshi exchange API support / markets
+-Tweaks :-)
+-------------------------------------------------------------------
+
+
 
 
 
