--- a/changelog.txt
+++ b/changelog.txt
@@ -507,6 +507,11 @@ Minor GUI tweaks
 -Tweaks :-)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.5:
+-Added visual / audio global percentage-based alert(s)
+-------------------------------------------------------------------
+
 
 
 
