--- a/changelog.txt
+++ b/changelog.txt
@@ -512,6 +512,11 @@ Minor GUI tweaks
 -Added visual / audio global percentage-based alert(s)
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.6:
+-GUI tweaks to percentage alerts
+-------------------------------------------------------------------
+
 
 
 
