--- a/changelog.txt
+++ b/changelog.txt
@@ -529,6 +529,12 @@ Minor GUI tweaks
 -Updated example coins lists
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.7.9:
+-Minor bug fix / tweak
+-------------------------------------------------------------------
+
+
 
 
 
