--- a/changelog.txt
+++ b/changelog.txt
@@ -585,6 +585,11 @@ app doing the data requests, not a malicious bot)
 -Minor tweaks
 -------------------------------------------------------------------
 
+-------------------------------------------------------------------
+1.8.8:
+-Back end / GUI tweaks
+-------------------------------------------------------------------
+
 
 
 
