--- a/changelog.txt
+++ b/changelog.txt
@@ -591,6 +591,11 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.8.9:
+-Added popular Youtube channels to the external links section
+-------------------------------------------------------------------
+
 
 
 
