--- a/changelog.txt
+++ b/changelog.txt
@@ -597,6 +597,15 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.0:
+-Added additional coinmarketcap API error warnings.
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
