--- a/changelog.txt
+++ b/changelog.txt
@@ -609,6 +609,14 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.2:
+-Added Upbit markets support
+-------------------------------------------------------------------
+
+
+
+
 
 
 
