--- a/changelog.txt
+++ b/changelog.txt
@@ -615,6 +615,17 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.3:
+-Minor semantics / GUI cleanup
+-Additional coinmarketcap data, per coin
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
