--- a/changelog.txt
+++ b/changelog.txt
@@ -622,6 +622,14 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.4:
+-Added Kucoin API support
+-------------------------------------------------------------------
+
+
+
+
 
 
 
