--- a/changelog.txt
+++ b/changelog.txt
@@ -635,6 +635,13 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.6:
+-Added ethfinex support
+-Optimized ethfinex / bitfinex API calls
+-------------------------------------------------------------------
+
+
 
 
 
