--- a/changelog.txt
+++ b/changelog.txt
@@ -649,6 +649,12 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.8:
+-Tweaks
+-------------------------------------------------------------------
+
+
 
 
 
