--- a/changelog.txt
+++ b/changelog.txt
@@ -655,6 +655,14 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+1.9.9:
+-Major semantics cleanup
+-Built front end GUI for additional LTC / ETH / USDT market pairings support (that was already built into back end)
+-Minor optimizations
+-------------------------------------------------------------------
+
+
 
 
 
