Partial markets update
Added bitstamp / okex altcoin market's API support, XMR market pairing support, and partailly updated additional USDT / XMR / LTC / ETH / BTC market pairings in example asset's configs.

--- a/changelog.txt
+++ b/changelog.txt
@@ -674,6 +674,14 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+2.0.1:
+-Added Okex and Bitstamp markets API support
+-Added XMR market pairing support
+-Added additional USDT / XMR / LTC / ETH / BTC pairings in example assets
+-------------------------------------------------------------------
+
+
 
 
 
