--- a/changelog.txt
+++ b/changelog.txt
@@ -682,6 +682,13 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+2.0.2:
+-Added ability to include misc. USD assets
+-------------------------------------------------------------------
+
+
+
 
 
 
