--- a/changelog.txt
+++ b/changelog.txt
@@ -704,6 +704,15 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+2.0.5:
+-Added Monero mining calculator
+-Added graviex markets API support
+-Tweaks
+-------------------------------------------------------------------
+
+
+
 
 
 
