--- a/changelog.txt
+++ b/changelog.txt
@@ -712,6 +712,13 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 
 
+-------------------------------------------------------------------
+2.0.6:
+-Added trading notes and reminders feature / setting
+-------------------------------------------------------------------
+
+
+
 
 
 
